Refactored buttons functionality

--- a/Calc/MainWindow.xaml
+++ b/Calc/MainWindow.xaml
@@ -45,71 +45,85 @@
                 Grid.Row="1"
                 Grid.Column="2"/>
         <Button x:Name="divideButton" Content="/"
+                Click="OperationButton_Click"
                 FontSize="22"
                 Margin="5"
                 Grid.Row="1"
                 Grid.Column="3"/>
         <Button x:Name="numberSeven" Content="7"
+                Click="NumberButton_Click"
                 FontSize="22"
                 Margin="5"
                 Grid.Row="2"
                 Grid.Column="0"/>
         <Button x:Name="numberEight" Content="8"
+                Click="NumberButton_Click"
                 FontSize="22"
                 Margin="5"
                 Grid.Row="2"
                 Grid.Column="1"/>
         <Button x:Name="numberNine" Content="9"
+                Click="NumberButton_Click"
                 FontSize="22"
                 Margin="5"
                 Grid.Row="2"
                 Grid.Column="2"/>
         <Button x:Name="multiplyButton" Content="*"
+                Click="OperationButton_Click"
                 FontSize="22"
                 Margin="5"
                 Grid.Row="2"
                 Grid.Column="3"/>
         <Button x:Name="numberFour" Content="4"
+                Click="NumberButton_Click"
                 FontSize="22"
                 Margin="5"
                 Grid.Row="3"
                 Grid.Column="0"/>
         <Button x:Name="numberFive" Content="5"
+                Click="NumberButton_Click"
                 FontSize="22"
                 Margin="5"
                 Grid.Row="3"
                 Grid.Column="1"/>
         <Button x:Name="numberSix" Content="6"
+                Click="NumberButton_Click"
                 FontSize="22"
                 Margin="5"
                 Grid.Row="3"
                 Grid.Column="2"/>
         <Button x:Name="minusButton" Content="-"
+                Click="OperationButton_Click"
                 FontSize="22"
                 Margin="5"
                 Grid.Row="3"
                 Grid.Column="3"/>
         <Button x:Name="numberOne" Content="1"
+                Click="NumberButton_Click"
                 FontSize="22"
                 Margin="5"
                 Grid.Row="4"
                 Grid.Column="0"/>
         <Button x:Name="numberTwo" Content="2"
+                Click="NumberButton_Click"
                 FontSize="22"
                 Margin="5"
                 Grid.Row="4"
                 Grid.Column="1"/>
         <Button x:Name="numberThree" Content="3"
+                Click="NumberButton_Click"
                 FontSize="22"
                 Margin="5"
                 Grid.Row="4"
                 Grid.Column="2"/>
         <Button x:Name="plusButton" Content="+"
+                Click="OperationButton_Click"
                 FontSize="22"
                 Margin="5"
                 Grid.Row="4"
                 Grid.Column="3"/>
         <Button x:Name="numberZero" Content="0"
+                Click="NumberButton_Click"
                 FontSize="22"
                 Margin="5"
                 Grid.Row="5"
